--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -23,22 +23,22 @@
                   <MenuItem fx:id="state" mnemonicParsing="false" onAction="#stateOpen" text="Статистика" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Настройки">
+          <Menu fx:id="menuSetting" mnemonicParsing="false" text="Настройки">
             <items>
-              <MenuItem mnemonicParsing="false" onAction="#paragraph" text="Перечень №1203" />
-                  <MenuItem fx:id="secrecy" mnemonicParsing="false" onAction="#secrecy" text="Гриф секретности" />
-                  <MenuItem fx:id="address" mnemonicParsing="false" onAction="#address" text="Адреса" />
-                  <MenuItem fx:id="type" mnemonicParsing="false" onAction="#type" text="Типы" />
-                  <MenuItem fx:id="categoryEdit" mnemonicParsing="false" onAction="#categoryEdit" text="Срочность" />
-                  <MenuItem fx:id="supervisor" mnemonicParsing="false" onAction="#supervisor" text="Руководители" />
+              <MenuItem fx:id="menuItemParagraph" mnemonicParsing="false" onAction="#paragraph" text="  Перечень №1203" />
+                  <MenuItem fx:id="menuItemSecrecy" mnemonicParsing="false" onAction="#secrecy" text="  Гриф секретности" />
+                  <MenuItem fx:id="menuItemAddress" mnemonicParsing="false" onAction="#address" text="  Адреса" />
+                  <MenuItem fx:id="menuItemType" mnemonicParsing="false" onAction="#type" text="  Типы" />
+                  <MenuItem fx:id="menuItemCategory" mnemonicParsing="false" onAction="#category" text="  Срочность" />
+                  <MenuItem fx:id="menuItemSupervisor" mnemonicParsing="false" onAction="#supervisor" text="  Руководители" />
             </items>
           </Menu>
             <Menu mnemonicParsing="false" text="Система">
               <items>
-                  <MenuItem fx:id="template" mnemonicParsing="false" text="Шаблоны" />
-                  <MenuItem fx:id="settings" mnemonicParsing="false" onAction="#settings" text="Настройки программы" />
-                  <MenuItem fx:id="usersItem" mnemonicParsing="false" onAction="#users" text="Исполнители" />
-                  <MenuItem mnemonicParsing="false" onAction="#logout" text="Сменить пользователя" />
+                  <MenuItem fx:id="template" mnemonicParsing="false" text="  Шаблоны" />
+                  <MenuItem fx:id="settings" mnemonicParsing="false" onAction="#settings" text="  Настройки программы" />
+                  <MenuItem fx:id="munuItemUsers" mnemonicParsing="false" onAction="#users" text="  Исполнители" />
+                  <MenuItem mnemonicParsing="false" onAction="#logout" text="  Сменить пользователя" />
               </items>
             </Menu>
           <Menu mnemonicParsing="false" text="Справка">
