--- a/src/main/resources/views/paragraphapp-choice.fxml
+++ b/src/main/resources/views/paragraphapp-choice.fxml
@@ -15,6 +15,6 @@
             </columns>
         </TableView>
         <Button fx:id="closeButton" cancelButton="true" layoutX="479.0" layoutY="438.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="25.0" prefWidth="111.0" text="Выход" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="10.0" />
-      <Button fx:id="addParagraphChoiceButton" layoutX="319.0" layoutY="374.0" mnemonicParsing="false" onAction="#addParagraphChoice" prefHeight="25.0" prefWidth="154.0" text="Добавить в приложение" />
+      <Button fx:id="btnAddParagraph" layoutX="271.0" layoutY="374.0" mnemonicParsing="false" onAction="#addParagraphChoice" prefHeight="25.0" prefWidth="202.0" text="Добавить в приложение" />
     </children>
 </AnchorPane>
