--- a/src/main/resources/views/settings.fxml
+++ b/src/main/resources/views/settings.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane maxHeight="500.0" maxWidth="600.0" minHeight="285.0" minWidth="600.0" prefHeight="338.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fezas.telegra.controllers.SettingController">
     <children>
-        <Button id="saveButton" fx:id="saveButton" layoutX="344.0" layoutY="304.0" mnemonicParsing="false" onAction="#saveSetting" prefHeight="25.0" prefWidth="120.0" text="Сохранить" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="136.0" />
+        <Button id="saveButton" fx:id="btnSave" layoutX="344.0" layoutY="304.0" mnemonicParsing="false" onAction="#saveSetting" prefHeight="25.0" prefWidth="120.0" text="Сохранить" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="136.0" />
         <Button fx:id="closeButton" cancelButton="true" layoutX="470.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="25.0" prefWidth="120.0" text="Выход" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="10.0" />
         <TabPane layoutX="14.0" layoutY="14.0" prefHeight="283.0" prefWidth="580.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
